# practice_gl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.sh
CMAKE_PREFIX_PATH/: setup.sh
CMAKE_PREFIX_PATH/cmakelists/: glfwglew.txt
glfw/: CMakeLists.txt  main.cpp  setup.sh
glfw-audio/: setup.sh
glfw-audio/src/: shaders.cpp  shaders.h
glfw-engine/: CMakeLists.txt  setup.sh  standard.frag  standard.vert
glfw-engine/src/: Engine.cpp  Engine.h  Graphics.cpp  Graphics.h  Node.cpp  Node.h  main.cpp
glfw-engine/src/node/: Axis.cpp  Axis.h  Camera.cpp  Camera.h  Model.cpp  Model.h  Triangle.cpp  Triangle.h
glfw-gltf/: CMakeLists.txt  setup.sh
glfw-gltf-audio/: CMakeLists.txt  setup.sh
glfw-gltf-audio/src/: window.h
glfw-gltf/dependency/: setup.sh
glfw-gltf/src/: main.cpp
glfw/glad/: vulkan.h
sdl2/: CMakeLists.txt  README.md  setup.sh
sdl2/src/: main.cpp
